# nina

./: .clinerules  .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  DEMO.md  Dockerfile  GEMINI.md  HACKATHON.md  JUDGES.md  PITCH.md  README.md  SECURITY.md  TEAM.md  bsc.address  docker-compose.yml  eslint.config.js  humans.txt  index.html  llms-full.txt  llms.txt  netlify.toml  nginx.conf  package-lock.json  package.json  server.json  vercel.json
.github/: copilot-instructions.md  repository-metadata.json
.well-known/: ai-plugin.json
agent-runtime/: .env.example  docker-compose.yml  package-lock.json  package.json  tsconfig.json
demo/: README.md  package-lock.json  package.json  run-agent-demo.ts  run-demo.ts
docs/: AI_BUILD_LOG.md  EXTRAS.md  GLOSSARY.md  PROJECT.md  README.md  TECHNICAL.md  agents.md  architecture.md  awesome.md  defi-tools.md  examples.md  faq.md  getting-started.md  llms-full.txt  mcp-servers.md  troubleshooting.md  what-is-this.md
erc8004-agents/: README.md  SKILL.md  ai.txt  index.html  llms-full.txt  llms.txt
erc8004-agents/sdks/python/: pyproject.toml
erc8004-agents/sdks/python/erc8004/: __init__.py  chains.py  client.py  contracts.py  identity.py  reputation.py  types.py  utils.py  validation.py
erc8004-agents/sdks/python/examples/: register_agent.py  reputation.py  search_agents.py
erc8004-agents/sdks/python/tests/: test_client.py  test_identity.py
examples/: 01-agent-discovery.ts  02-market-data.ts  03-mcp-client-demo.ts  04-erc8004-agent.ts  README.md
public/: 404.html  ai.txt  erc8004.html  llms.txt  manifest.json  openapi.json
schema/: speraxAgentSchema_v1.json
scripts/: deploy.sh  inject-attribution.js
server/: .env.example  (+1 more)
(+2483 files in other folders)
